migration-assessment/kubernetes/network/20-allow-ingress-from-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-petclinic-from-ingress
  namespace: petclinic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: petclinic
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
